--- a/vignettes/KNN_Model.Rmd
+++ b/vignettes/KNN_Model.Rmd
@@ -32,139 +32,18 @@ invisible(lapply(use_pkgs, require, character.only = TRUE))
 combined <- read_csv("../data/Combined.csv")
 
 
-meteoswiss <- read_csv2("../data/Meteoswiss/order_114596_data.txt")
-meteoswiss_names <-meteoswiss|>
-  dplyr::select(-stn,-time)|>
-  colnames() 
-
-
-
-tiff_names <- list.files("../data/Tiffs/")
-tiff_names_short <- tiff_names |>
-    str_sub(end = -5)
-
 combined <- combined |>
     filter(complete.cases(across(all_of(tiff_names_short)))) |>
     dplyr::select(all_of(c(tiff_names_short,meteoswiss_names)),temperature,hour,month,year,day,Log_Nr) |> drop_na()
 
 
-combined_test <- combined |> filter(year == 2021)
-combined_train <- combined |> filter(year %in% c(2019,2020,2022))
-
-
-correlators <- c(tiff_names_short,meteoswiss_names[-1],"hour","day","month")|>
-    paste(collapse  = "+",sep = "+")
-
-formula_local = as.formula(paste("temperature","~", correlators))
-
-# For reproducibility (pseudo random choice)
-set.seed(123)  
-
-# Split 80 % to 20 % 
-split_Combined <- rsample::initial_split(combined, prop = 0.8)
-
-# We create a training set and a test set
-Combined_train <- rsample::training(split_Combined)
-Combined_test <- rsample::testing(split_Combined)
-
-# We prepare our data (standardization etc.)
-pp <- recipes::recipe(formula_local,
-                        data = combined_train  |> drop_na()) |>
-      recipes::step_BoxCox(all_predictors()) |>
-      recipes::step_center(all_numeric(), -all_outcomes()) |>
-      recipes::step_scale(all_numeric(), -all_outcomes())
-
 # We calculate a KNN Model with cross validation as method
 mod_cv <- caret::train(pp, data = combined_train |> drop_na(),
                          method = "knn",
-                         trControl = caret::trainControl(method = "none"),
-                         tuneGrid = data.frame(k = 50),
-                         metric = "MAE")
-
-# We calculate a multivariate linear regression model with cross validation
-mod_lm <- caret::train(pp, data = combined_train  |> drop_na(),
-                         method = "lm",
-                         trControl = caret::trainControl(method = "cv", 10),
+                         trControl = caret::trainControl(method = "cv", 3),
+                         tuneGrid = data.frame(k = c(5,10, 15)),
                          metric = "MAE")
 ```
-
-
-
-```{r function for evaluation, message=FALSE, warning=FALSE}
-eval_model <- function(mod, df_train, df_test){
-  
-  # add predictions to the data frames
-  df_train <- df_train |> 
-    drop_na()
-  df_train$fitted <- predict(mod, newdata = df_train)
-  
-  df_test <- df_test |> 
-    drop_na()
-  df_test$fitted <- predict(mod, newdata = df_test)
-  
-  # get metrics tables
-  metrics_train <- df_train |> 
-    yardstick::metrics(temperature, fitted)
-  
-  metrics_test <- df_test |> 
-    yardstick::metrics(temperature, fitted)
-  
-  # extract values from metrics tables
-  mae_train <- metrics_train |> 
-    filter(.metric == "mae") |> 
-    pull(.estimate)
-  rsq_train <- metrics_train |> 
-    filter(.metric == "rsq") |> 
-    pull(.estimate)
-  
-  mae_test <- metrics_test |> 
-    filter(.metric == "mae") |> 
-    pull(.estimate)
-  rsq_test <- metrics_test |> 
-    filter(.metric == "rsq") |> 
-    pull(.estimate)
-  
-  # visualise as a scatterplot
-  # adding information of metrics as sub-titles
-  plot_1 <- ggplot(data = df_train, aes(temperature, fitted)) +
-    geom_point(alpha = 0.3) +
-    geom_smooth(method = "lm", se = FALSE, color = "red") +
-    geom_abline(slope = 1, intercept = 0, linetype = "dotted") +
-    labs(subtitle = bquote( italic(R)^2 == .(format(rsq_train, digits = 2)) ~~
-                            MAE == .(format(mae_train, digits = 3))),
-         title = "Training set") +
-    theme_classic()
-  
-  plot_2 <- ggplot(data = df_test, aes(temperature, fitted)) +
-    geom_point(alpha = 0.3) +
-    geom_smooth(method = "lm", se = FALSE, color = "red") +
-    geom_abline(slope = 1, intercept = 0, linetype = "dotted") +
-    labs(subtitle = bquote( italic(R)^2 == .(format(rsq_test, digits = 2)) ~~
-                            MAE == .(format(mae_test, digits = 3))),
-         title = "Test set") +
-    theme_classic()
-  
-  out <- cowplot::plot_grid(plot_1, plot_2)
-  
-  return(out)
-}
-```
-
-
-
-```{r evaluation of the lm model, message=TRUE, paged.print=FALSE}
-eval_model(mod_cv, combined_train, combined_test)
-eval_model(mod_lm, combined_train, combined_test)
-```
-
-
-
-```{r}
-eval_model(mod_lm, combined_train, combined_test)
-```
-
-
-
 
 
 
