--- a/vignettes/XGBoost.Rmd
+++ b/vignettes/XGBoost.Rmd
@@ -62,13 +62,13 @@ combined_train <- combined |> filter(year %in% c(2019,2020,2022))
   
   
 tune_grid <- expand.grid(
-  nrounds = 100,
+  nrounds = 6000,
   eta = c(0.01, 0.1, 0.3),
   max_depth = c(2, 3, 5, 10),
-  gamma = c(0),
+  gamma = c(0,10,100),
   colsample_bytree = 1,
-  min_child_weight = 1,
-  subsample = 1
+  min_child_weight = c(1,3),
+  subsample = 0.8
 )
 
 tune_control <- caret::trainControl(
@@ -84,8 +84,7 @@ xgb_tune <- caret::train(
   trControl = tune_control,
   tuneGrid = tune_grid,
   method = "xgbTree",
-  verbose = TRUE,
-  nthreads = 4
+  verbose = TRUE
 )
 
 
