--- a/vignettes/KNN_Model.Rmd
+++ b/vignettes/KNN_Model.Rmd
@@ -29,19 +29,11 @@ if (length(new_pkgs) > 0) install.packages(new_pkgs,repos = "http://cran.us.r-pr
 invisible(lapply(use_pkgs, require, character.only = TRUE))
 
 
-combined <- read_csv("../data/Combined.csv")
-
-
-combined <- combined |>
-    filter(complete.cases(across(all_of(tiff_names_short)))) |>
-    dplyr::select(all_of(c(tiff_names_short,meteoswiss_names)),temperature,hour,month,year,day,Log_Nr) |> drop_na()
-
-
 # We calculate a KNN Model with cross validation as method
 mod_cv <- caret::train(pp, data = combined_train |> drop_na(),
                          method = "knn",
                          trControl = caret::trainControl(method = "cv", 3),
-                         tuneGrid = data.frame(k = c(5,10, 15)),
+                         tuneGrid = data.frame(k = c(5)),
                          metric = "MAE")
 ```
 
