--- a/vignettes/Main.Rmd
+++ b/vignettes/Main.Rmd
@@ -30,7 +30,7 @@ load_packages(packages)
 ## Data Wrangling
 ```{r message=FALSE, warning=FALSE}
 
-source("../R/raw_tif_processing.R")
+# source("../R/raw_tif_processing.R")
 
 
 source("../R/data_combination.R")
@@ -103,11 +103,10 @@ Model Training
 ```{r}
 source("../R/random_forest.R")
 random_forest_model <- random_forest(pp,combined_train)
-```
 
 
-Evaluation
-```{r}
+
+
 source("../R/evaluation.R")
 combined_test$fitted <- predict(random_forest_model, combined_test)
 eval <- evaluate(combined_test,random_forest_model)
@@ -137,14 +136,12 @@ model_settings <- parsnip::boost_tree(
   set_engine("xgboost",nthread = 6, verbose = T) |>
   set_mode("regression")
 xgb_workflow <- workflows::workflow() |>
-  add_formula(temperature ~ .) |>
+  add_formula(formula_local) |>
   add_model(model_settings)
 
-combined_train_xgb <- combined_train |> dplyr::select(temperature,hour,day,month,temp,rad,rain,rain1,temp_3,temp_5,rain1,rain2,
-                  rain3,SE_Raster_101,FO_Raster_51,GA_Raster_5,WA_Raster_21,
-                  AC_Raster_101,SLO_21,VH_WSL_21_21,SVF_5,Bul_Raster_51,BH_21,DEM,LV_03_E,LV_03_N)
 
-xgb_results <- xgb(xgb_workflow,train = combined_train_xgb)
+
+xgb_results <- xgb(xgb_workflow,train = combined_train)
 
 
 
@@ -166,18 +163,16 @@ xgb_best_hp <- tune::finalize_workflow(
 
 
 
-combined_test_xgb <- combined_test|> dplyr::select(c(temperature,hour,day,month,temp,rad,rain,rain1,temp_3,temp_5,rain1,rain2,
-                  rain3,SE_Raster_101,FO_Raster_51,GA_Raster_5,WA_Raster_21,
-                  AC_Raster_101,SLO_21,VH_WSL_21_21,SVF_5,Bul_Raster_51,BH_21,DEM,LV_03_E,LV_03_N))
+
 
 
 # train a final (best) model with optimal
 # hyper-parameters
-xgb_best_model <- fit(xgb_best_hp, combined_train_xgb)
+xgb_best_model <- fit(xgb_best_hp, combined_train)
 
 
 source("../R/evaluation.R")
-eval <- evaluate(combined_test_xgb,xgb_best_model)
+eval <- evaluate(combined_test,xgb_best_model)
  eval[[1]]
  eval[[2]]
 
