--- a/vignettes/Main.Rmd
+++ b/vignettes/Main.Rmd
@@ -86,7 +86,7 @@ In this section we define our predictors
 
 ## Model Definitions and Recipe
 
-```{r}
+```{r Predictors and Recipe, message=FALSE, warning=FALSE, include=FALSE}
 
 # Take all column-names you need as predictors from the combined file
 predictors <- combined |>
@@ -111,22 +111,36 @@ map's spatial temperature distribution. The table shows that the model with
 the random forest approach shows the best performance, which is why it was
 used for the map.
 
-| Model             | RSQ [Test] | RMSE [Test] | MAE [Test] | Bias [Test] |
-|-------------------|------------|-------------|------------|-------------|
-| Linear Regression | 0.12       | 0.97 °C     | 0.76 °C    | 0.007 °C    |
-| KNN               |            |             |            |             |
-| Random Forest     |            |             |            |             |
-| XGB Boost         |            |             |            |             |
-| Neuronal Network  |            |             |            |             |
-
-: **TABLE 1:** Overview of the evaluation of the models. The RMSE describes
-the precision and the bias describes accuracy.
+## Evaluation of the models
 
 To fully implement the Open Sciences approach, the models can be computed
 using the following code chunks. Further, for every model, a short synopsis
 of the optimized hyperparameters is given. It must therefore be decided
 before running the code chunk whether the hyperparameters determined by us
 are to be used or whether the hyperparameters are to be optimized.
+
+| Element of the list | What do you find                            |
+|---------------------|---------------------------------------------|
+| 1                   | A metric table (RSQ, RMSE, MAE and Bias)    |
+| 2                   | Model visualization (Training and Test set) |
+| 3                   |                                             |
+| 4                   |                                             |
+
+: **TABLE 1:** Overview of the function return of the evaluation function
+
+| Model             | RSQ [Test] | RMSE [Test] | MAE [Test] | Bias [Test] |
+|-------------------|------------|-------------|------------|-------------|
+| Linear Regression | 0.12       | 0.97 °C     | 0.76 °C    | 0.007 °C    |
+| KNN               |            |             |            |             |
+| Random Forest     | 0.64       | 0.68 °C     | 0.51 °C    | -0.14 °C    |
+| XGB Boost         |            |             |            |             |
+| Neuronal Network  |            |             |            |             |
+
+: **TABLE 2:** Overview of the evaluation of the models. The RMSE describes
+the precision and the bias describes accuracy.
+
+|     |
+|-----|
 
 ## LM Model
 
@@ -138,11 +152,11 @@ lm_model <- LM_Model(pp, combined_train)
 lm_model$results$Rsquared
 
 source("../R/evaluation.R")
-evaluation <- evaluation_function(combined_test, combined_train ,lm_model)
+# The function will return a list
+evaluation <- evaluation_function(combined_test, combined_train, lm_model)
 
 # If we want a table 
 evaluation[[1]]
-
 # Overview Training and Test
 evaluation[[2]]
 ```
@@ -153,7 +167,7 @@ The computational complexity is enormous and thus, KNN is not suitable for
 very large data sets. You will need a very good device. We recommend using
 our hyperparameter k = xx.
 
-```{r}
+```{r KNN Model, echo=FALSE, message=FALSE, warning=FALSE}
 # Load the R script to calculate a KNN model
 source("../R/knn_model.R")
 
@@ -177,27 +191,26 @@ eval[[2]]
 
 ## Random Forest Model
 
-```{r}
+Hyperparamater:
+
+```{r Random Forest, echo=FALSE, message=FALSE, warning=FALSE}
 source("../R/random_forest.R")
 random_forest_model <- random_forest(pp,combined_train)
 
-
-
-
 source("../R/evaluation.R")
+evaluation <- evaluation_function(combined_test, combined_train, random_forest_model)
 combined_test$fitted <- predict(random_forest_model, combined_test)
 eval <- evaluate(combined_test,random_forest_model)
 
-eval[[1]]
-eval[[2]]
-
-
-
-
-
+# If we want a table 
+evaluation[[1]]
+# Overview Training and Test
+evaluation[[2]]
 ```
 
 ## XGB Model
+
+Hyperparamater:
 
 ```{r}
 
@@ -258,6 +271,8 @@ eval <- evaluate(combined_test,xgb_best_model)
 ```
 
 ## Neuronal Network
+
+Hyperparamater:
 
 ```{r}
  
